--- a/docs/use-the-network/console/flows/flows-faq.mdx
+++ b/docs/use-the-network/console/flows/flows-faq.mdx
@@ -30,7 +30,7 @@ Yes. Labels will still exist to organize and manage devices. Users can choose to
 
 ### What happens to functionality that used to be tied to labels (ADR, Notifications, multiple packet purchases)?
 
-This functionality still exists. These settings are defined as general settings and can be applied to devices or groups of devices in the Flows workspace. Documentation will be coming.
+This functionality still exists. ADR and CF List can be directly applied to a device or group of devices. With notification and packet purchase users can define these features with general settings and apply to devices or groups of devices in the Flows workspace.
 
 ### What will happen to devices and settings when you migrate Console 2.0 to the production server?
 
