--- a/docs/use-the-network/console/flows/flows.mdx
+++ b/docs/use-the-network/console/flows/flows.mdx
@@ -8,9 +8,13 @@ slug: /use-the-network/console/flows
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Welcome to Flows. Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integrations.
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/flows/flows.png"
+  )}
+/>
 
-Flows enables users to visually connect nodes and control the flow of data.
+Welcome to Flows. Flows is a visual-centric view of the key elements in Console and allows users to instantly understand the relationship among devices, functions, and integrations. Flows enables users to visually connect nodes and control the flow of data.
 
 Although Flows is a new feature, it’s designed to be much more intuitive based on core user goals of adding devices, defining functions, and setting up integrations to transfer data to their endpoints.
 
