--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -22,7 +22,7 @@ Alternatively you can create Labels beforehand.
 
 To add a new label, on the Devices page click the Add New Label icon [NEED IMAGE].
 
-The follwoing screen appears.
+The following screen appears.
 
 [REPLACE IMAGE]
 <img src={useBaseUrl("img/use-the-network/console/console-add-label.png")} />
@@ -38,6 +38,4 @@ go to the specific device details page and click the Add Label button. You can c
 
 ## Label Configurations
 
-Label and device configurations (Alerts, ADR, Packets, CF-list) can be specified on the Flows Worskpace. 
-
-For more information about Flows click here (LINK).
+Label and device configurations (Alerts, ADR, Packets, CF List) have been updated. For more information about Flows click [here](/use-the-network/console/flows).
