fix flows faw title

--- a/docs/use-the-network/console/flows/flows-faq.mdx
+++ b/docs/use-the-network/console/flows/flows-faq.mdx
@@ -1,7 +1,7 @@
 ---
-id: flowsfaq
+id: flows-faq
 sidebar_label: Frequently Asked Questions
-slug: /use-the-network/console/flows/flowsfaq
+slug: /use-the-network/console/flows/flows-faq
 ---
 
 # Frequently Asked Questions
