remove add image reminders

--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -20,11 +20,10 @@ During device creation you can add an existing label or create a new one.
 
 Alternatively you can create Labels beforehand. 
 
-To add a new label, on the Devices page click the Add New Label icon [NEED IMAGE].
+To add a new label, on the Devices page click the Add New Label icon.
 
 The following screen appears.
 
-[REPLACE IMAGE]
 <img src={useBaseUrl("img/use-the-network/console/console-add-label.png")} />
 
 ## Attaching Labels
