Apply suggestions from code review
It solves some typos on $HNT writing and a broken URL with localhost conflicts.

Co-authored-by: Joey Hiller <jthiller@gmail.com>

--- a/docs/use-the-network/light-hotspots/guides/rak-concentrators.mdx
+++ b/docs/use-the-network/light-hotspots/guides/rak-concentrators.mdx
@@ -22,7 +22,7 @@ repository.
 
 :::warning
 Data Only Hotspots cannot earn $HNT, at least for now, and after milestone 2
-they will earn $HTN only for Device Packet Transfer. Remember to keep an eye on
+they will earn $HNT only for Device Packet Transfer. Remember to keep an eye on
 [Light Hotspots Project](https://docs.helium.com/use-the-network/light-hotspots)
 and the **#gateway-development** channel on the
 [Helium Discord Server](https://discord.gg/helium) to check how the development
@@ -374,4 +374,4 @@ configuration to purchase more packets when several hotspots hear the device.
 
 At this point, your Data Only Hotspot is ready to be added to the blockchain!
 You can find more information about that process
-[here](http://localhost:3000/mine-hnt/data-only-hotspots#pre-requisites).
+[here](/mine-hnt/data-only-hotspots#pre-requisites).
