--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -29,7 +29,7 @@ Console is available as a free to use hosted application at [console.helium.com]
 * [Migrating Devices](/use-the-network/console/migrating-devices)
 * [Labels](/use-the-network/console/labels)
 * [Debug](/use-the-network/console/debug)
-* [Adaptive Data Rate](/use-the-network/console/adr)
+* [Device Configurations](/use-the-network/console/adr)
 * [Functions](/use-the-network/console/functions)
 * [Integrations](/use-the-network/console/integrations)
 * [CLI](/use-the-network/console/cli)
