--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -18,7 +18,7 @@ Labels are simply user-defined identifiers that can be attached to one or more d
 
 During device creation you can add an existing label or create a new one.
 
-Alternatively you can create Labels beforehand. 
+Alternatively you can create labels beforehand. 
 
 To add a new label, on the Devices page click the Add New Label icon.
 
@@ -32,9 +32,15 @@ Labels can be attached to devices during or after creation. If
 you would like to attach a label to a device during creation,
 make sure to create the label beforehand, and it will be available to select.
 
+<img
+  src={useBaseUrl("img/use-the-network/console/console-add-device-label.png")}
+/>
+
 To attach a label after creating a new device,
 go to the specific device details page and click the Add Label button. You can choose an existing label from the dropdown list or create a label.
 
+To attach a label to a device from the Flows workspace check [here](/use-the-network/console/flows/actions#add-labels-to-devices). 
+
 ## Label Configurations
 
-Label and device configurations (Alerts, ADR, Packets, CF List) have been updated. For more information about Flows click [here](/use-the-network/console/flows).
+Label and device configurations (Alerts, ADR, Packets, CF List) have been updated, go [here](/use-the-network/console/adr) for information about how to configure these settings. 
