--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -1,6 +1,6 @@
 ---
 id: console-adr
-sidebar_label: Configurations
+sidebar_label: Device Configurations
 slug: /use-the-network/console/adr
 ---
 
