--- a/docs/use-the-network/console/flows/orientation.mdx
+++ b/docs/use-the-network/console/flows/orientation.mdx
@@ -10,10 +10,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 The main elements of Flows are:
 
-- The Workspace
-- Nodes and Edges
-- Inspector
-- Debug
+- [The Workspace](#workspace)
+- [Nodes and Edges](#nodes-and-edges)
+- [Inspector](#inspector)
+- [Debug Mode](#debug-mode)
 
 
 ## Workspace
@@ -86,12 +86,30 @@ Users can control the flow of device data using edges to provide the following c
 
 ## Inspector 
 The Inspector provides the ability to:
-Visually inspect node details
-Make common node configuration changes
-Access node in other areas of Console for more complete edits
+- Visually inspect node details
+- Make common node configuration changes
+- Access node in other areas of Console for more complete edits
 
-To access the Inspector simply click a node and different options appear:
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/flows/flows-inspector.png"
+  )}
+/>
+
+To access the Inspector simply click a node and different options appear for the following:
 
 - Devices or Labels
 - Functions
 - Integrations
+
+## Debug Mode
+
+The Console Debug tool allows you to quickly and easily examine device messages. This enables you to verify and debug issues much more easily without requiring the data to be sent to an application endpoint first. For security and privacy reasons the Debug tool does not persist data. Instead, the 40 most recent events are accumulated from the time the Debug window is opened.
+
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/console-debug-button.png"
+  )}
+/>
+
+For more information about Debug Mode go [here](/use-the-network/console/debug).
