--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -1,6 +1,6 @@
 ---
-id: console-adr
-sidebar_label: Configurations
+id: device-configurations 
+sidebar_label: Device Configurations
 slug: /use-the-network/console/adr
 ---
 
