--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -42,6 +42,8 @@ Hotspots before they are granted access to the blockchain.
 | [Kerlink](https://www.kerlink.com)                      | [Kerlink](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/kerlink.md)          | 2021-02-24    | [13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK](https://explorer.helium.com/accounts/13Mpg5hCNjSxHJvWjaanwJPBuTXu1d4g5pGvGBkqQe3F8mAwXhK) |
 | [HeNet BV/LongAP](https://www.longap.com)               | [HeNet BV/LongAP](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/henet.md)    | 2021-03-16    | [12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4](https://explorer.helium.com/accounts/12zX4jgDGMbJgRwmCfRNGXBuphkQRqkUTcLzYHTQvd4Qgu8kiL4) |
 | [Smart Mimic](https://smartmimic.com)                   | [Smart Mimic](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers/smart-mimic.md)  | 2021-03-25    | [13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv](https://explorer.helium.com/accounts/13MS2kZHU4h6wp3tExgoHdDFjBsb9HB9JBvcbK9XmfNyJ7jqzVv) |
+| [Seeed/SenseCap](https://www.sensecapmx.com/)           | [Seeed/SenseCap](https://github.com/jancee/HIP/blob/pre/0019-third-party-manufacturers/seeed.md)        | 2021-06-15    | [14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF](https://explorer.helium.com/accounts/14NBXJE5kAAZTMigY4dcjXSMG4CSqjYwvteQWwQsYhsu2TKN6AF) |
+
 
 ## Becoming a Maker
 
