--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -21,7 +21,8 @@ List known hotspots as registered on the blockchain.The results are paged. If a
 `cursor` field is present in the response, more results are available.
 
 The `filter_modes` parameter can be used to filter hotspot by how they were
-added to the blockchain. Supported values are `full`, `dataonly`, or `light`.
+added to the blockchain. Supported values are `full`, `dataonly`, or `light`. A
+comma separated list (no whitespace) can be used to filter for multiple modes.
 
 <Tabs
   block={true}
