--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -26,7 +26,7 @@ equivalent to 1 Data Credit \(DC\). For more information please go
 To register for an account, visit [Helium Console](https://console.helium.com)
 and click **Sign Up**.
 
-During registration, you'll be asked to provide an Organization name.
+During registration, you'll be asked to provide an Organization name. For more information about Organizations go [here](/use-the-network/console/users#organizations). 
 
 Define an Organization name for the top level owner of the account \(i.e. company
 name\).
