--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -109,7 +109,7 @@ as Data Only Hotspots.
 #### Add Hotspot to Blockchain
 
 - **Target Completion: early July**
-- **Status: Pending Activation on Mainnet**
+- **Status: COMPLETE**
 
 At the completion of Milestone 1.5, Data Only Hotspots can be added to the
 blockchain, assert its location, and be seen on explorer.helium.com.
@@ -124,7 +124,7 @@ earn $HNT.
 #### Earn HNT For Device Packet Transfer
 
 - **Target Completion: Summer 2021**
-- **Status: NOT YET STARTED**
+- **Status: Development In Progress**
 
 Data Only Hotspots will earn $HNT for device data transfer.
 
