--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -60,8 +60,8 @@ So, if the Network achieves its target block time of `60` seconds, and target
 epoch of `30` blocks, the blockchain will produce `2,500,000` HNT per month. Per
 epoch, this equals roughly `1712.704154343` HNT. The math for this is as follows:
 
-- `(43790.40 minutes per month / 30 minutes per epoch) = 1459.68 epochs per month`
-- `(2500000 tokens minted per month / 1459.68 epochs per month) = 1712.704154343 HNT per epoch`
+- `(43200 minutes per month / 30 minutes per epoch) = 1440 epochs per month`
+- `(2500000 tokens minted per month / 1440 epochs per month) = 1736.1111 HNT per epoch`
 
 ### What Are The Current Block and Epoch Times?
 
