--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -80,13 +80,13 @@ the following reward types:
 
 | Reward Type           | Percentage    | HNT Earned by Reward Type |
 | :-------------------- | :------------ | :------------------------ |
-| PoC Challenger        | .90%          | 15.41433739               |
-| PoC Challengees       | 5.02%         | 85.97774855               |
-| Witnesses             | 20.08%        | 343.9109942               |
-| Consensus Group       | 6%            | 102.7622493               |
-| Security Tokens       | 33%           | 565.1923709               |
-| Network Data Transfer | _Up to 35%_   | _Up to 599.446454_        |
-| **Total**             | **100%**      | **1712.70415434**         |
+| PoC Challenger        | 0.90%         | 15.6250               |
+| PoC Challengees       | 5.02%         | 87.1527               |
+| Witnesses             | 20.08%        | 348.6111              |
+| Consensus Group       | 6%            | 104.1666              |
+| Security Tokens       | 33%           | 572.9166              |
+| Network Data Transfer | _Up to 35%_   | _Up to 607.6389       |
+| **Total**             | **100%**      | **1736.1111**         |
 
 **Rewards Change Over Time**
 
