--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -71,7 +71,7 @@ and epoch statistics, past $HNT production numbers, and much more.
 
 ## HNT Distributions Per Epoch
 
-As calculated above, the target `HNT` per epoch is approximately `1712.704154343`. The
+As calculated above, the target `HNT` per epoch is approximately `1736.1111`. The
 next logical question is, "Where does all this HNT go?" Let's take a look.
 
 Below are the mining rewards per epoch as of August 1, 2021. For every complete epoch, marked by the
