--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -150,7 +150,7 @@ This calculation is:`(500,000,000 DC * $0.00001 / $2 HNT Oracle Price)`
   above.
 - Hotspots can earn one or more reward types during any given epoch.
 - Hotspots are only eligible to submit one Proof of Coverage Challenge - which
-  results in them earning the `PoC Challenger` reward - **once per 480 blocks**.
+  results in them earning the `PoC Challenger` reward - **up to once per 360 blocks**.
 - `PoC Challenger`, `PoC Challengee`, and `Witness` reward types get distributed
   in the epoch that includes the corresponding PoC receipt.
 - A Hotspots can earn more than one `PoC Challengee` and `Witness` rewards per
