--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -186,7 +186,7 @@ think blocks, not clocks. Here's a step-by-step example to make it clearer:
   seconds (which is double the target of `60` seconds).
 - This would mark `30` blocks over the `60` minute period, conclude an epoch,
   and result in HNT rewards being distributed.
-- As with any epoch, we would distribute the target of (approximately) `1712.70415434`
+- As with any epoch, we would distribute the target of (approximately) `1736.1111`
   HNT.
 - However, since this epoch took twice as long as normal - `60` minutes versus
   `30` minute target - the blockchain essentially distributes HNT at **half the
