--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -122,9 +122,9 @@ Here are a few examples to illustrate how this works in practice:
   routing packets at the 1:1 rate.
 - The remaining `597.6389` from the Network Data Transfer reward would be
   distributed ratably among the Challengers, Witnesses and Challengees.
-  - `20.40391572` to the Challenger group
-  - `455.2340306` to the Witness group
-  - `113.8085077` to the Challengee group
+  - `20.6457` to the Challenger group
+  - `461.5945` to the Witness group
+  - `115.3986` to the Challengee group
 
 **Example 2: DC Burn exceeds 35% HNT**
 
