--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -110,6 +110,7 @@ Additionally, any pricing details listed here are likely to be out of date. Plea
 | [Argon.build](https://www.argon.build)                       | Yes                     | No          | $80 per month + 3% reward share                                     |
 | [Bison Trails](https://www.bisontrails.co)                   | Yes                     | No          |                                                                     | Does not offer service to individuals who plan to run fewer than 10 nodes
 | [Chorus One](https://chorus.one/products/whitelabel-staking) | Yes                     | No          |                                                                     | Does not have public pricing.
+| [DLI](https://dlinodes.com)                                  | Yes                     | Yes         | All run in DLI Cloud, Staking, Nodes, 24/7 Support                  |
 | [Figment](https://figment.io/)                               | Yes                     | No          | 5% comission                                                        |
 | [Helium Rising](https://www.heliumrising.com)                | Yes                     | Yes         | 5% comission                                                        |
 | [Helium Staking](https://www.helium-staking.com)             | Yes                     | Yes         | $150 per month for non-custodial full node. 4% of rewards for pool. |
