--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -10,10 +10,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 There's a number of device configurations available including: 
 
-- [ADR](adr#adr)
-- [CF List](adr#cf-list) 
-- [Alerts](adr#alerts) 
-- [Multiple Packets](adr#multiple-packets)
+- [ADR](#adr)
+- [CF List](#cf-list) 
+- [Alerts](#alerts) 
+- [Multiple Packets](#multiple-packets)
 
 ADR and CF List settings are either enabled/disabled and applied to device or label nodes directly using the Flows Inspector. 
 
