--- a/docs/use-the-network/console/device-configurations.mdx
+++ b/docs/use-the-network/console/device-configurations.mdx
@@ -120,10 +120,9 @@ To create a new one, select Create New Alert choose a name, alert type (email, w
 
 ## Multiple Packets
 
-The ability to pay for additional packets for redundancy and location triangulation purposes. 
+Data Credits are only charged for uplinks. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
 
-**Note:** Even if you don’t use the multiple packet purchase feature, there are certain conditions which the system will purchase multiple packets to help ensure successful packet transmission. These include: initial joining of the device (up to 5 packets), downlink (up to 3 packets), and for acknowledgements (up to 3 packets).
-
+**Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system purchases multiple packets to help ensure successful packet transmission (these cost additional Data Credits and happen automatically). These include: initial joining of the device (up to 5 packets), downlinks that contain data payloads (up to 3 packets). These additional packets help ensure connection reliability to downlink via the Hotspot with the strongest connection.
 ### Configuring Multiple Packets
 
 Configuring multiple packets for a device a group of devices involved two main steps:
