remove "fraction of summaries" text

--- a/docs/api/blockchain/state_channels.mdx
+++ b/docs/api/blockchain/state_channels.mdx
@@ -38,8 +38,7 @@ _Query Parameters_
 
 200: OK
 
-Return a page of state channel close transactions. Only a fraction of the
-summaries for a state channel is shown here
+Return a page of state channel close transactions. 
 
 ```json
 {
