Guide to set up a Data Only Hotspot using a WisLink RAK LPWAN concentrator module and a Raspberry Pi (#539)
* Add rak-concentrators.mdx and images.

* Add the rak-concentrators.mdx to the sidebar.

* Update light-hotspots.mdx to add a link to the guide rak-concentrators.mdx.

* Apply suggestions from code review

It solves some typos on $HNT writing and a broken URL with localhost conflicts.

Co-authored-by: Joey Hiller <jthiller@gmail.com>

Co-authored-by: Joey Hiller <jthiller@gmail.com>
Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -170,6 +170,8 @@ All Hotspots will not need to follow the Blockchain.
 - [Kerlink gateways](/use-the-network/light-hotspots/guides/kerlink)
   - Kerlink gateways will only mine HNT as Data Only Hotspot unless it is
     specified as a Helium-Compatible Kerlink Miner.
+- [RAK Concentrator (RAK2245/RAK2247/RAK2287) + Raspberry Pi 2, 3, or 4](/use-the-network/light-hotspots/guides/rak-concentrators)
+  - This setup will only mine HNT as a Data Only Hotspot.
 
 :::info
 
