--- a/docs/api/blockchain/assert_locations.mdx
+++ b/docs/api/blockchain/assert_locations.mdx
@@ -17,7 +17,7 @@ import TabItem from "@theme/TabItem";
 GET https://api.helium.io/v1/assert_locations
 ```
 
-Use this API to list assert location transactions.
+Use this API to list `assert_location` transactions.
 
 This route is `cursor` paginated.
 
