--- a/docs/api/blockchain/assert_locations.mdx
+++ b/docs/api/blockchain/assert_locations.mdx
@@ -38,7 +38,7 @@ _Query Parameters_
 
 200: OK
 
-Return a page of assert_location transactions.
+Return a page of `assert_location` transactions.
 
 ```json
 {
