--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -31,7 +31,7 @@ Product names on this page should follow [Helium branding guidelines](https://ww
 
 QR Code Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Users use the camera in the Helium App to add this type of Hotspot. 
 
-To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41) or [read more about generating QR code](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
+To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41) or [read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
 
 ### Example QR Onboarding Flow
 <img
@@ -48,7 +48,7 @@ To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`
 
 
 ## Web Onboarding
-Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Makers generate a deep-link back to the Helium App to finish the `add_gateway` transaction. [Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/)
+Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Makers generate a deep link back to the Helium App to finish the `add_gateway` transaction. [Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
 
 To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
 
@@ -58,7 +58,9 @@ The Helium Hotspot App will start scanning for broadcasting Hotspots. Makers wil
 
 The `localname` is the name used on the **Found Hotspots** page.
 
-To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8)
+To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8).
+
+[Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
 
 # Constructing the Add Gateway Transaction
 
@@ -111,7 +113,7 @@ Once you’re ready to proceed, request a Maker account and replace the test pay
 
 ## Requesting a Maker Account
 
-:::Warning
+:::warning
 
 Only request a Maker Account from your DeWi contact if you have passed the Hardware Audit and Certification stages.
 
