--- a/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing.mdx
@@ -12,11 +12,11 @@ This guide is intended for companies that have been approved via HIP19, or are c
 
 ## Hotspot App Compatibility
 
-For optimal user experience, we recommend Hotspots be equipped with compatible Bluetooth and Wi-Fi functionality. This allows a seamless onboarding experience. This integration guide will walk through both Bluetooth onboarding and QR code onboarding (to support Hotspots without Bluetooth radios)
+For optimal user experience, we recommend Hotspots be equipped with compatible Bluetooth and Wi-Fi functionality. This allows a seamless onboarding experience. This integration guide will walk through both Bluetooth onboarding and QR code/Web onboarding (to support Hotspots without Bluetooth radios)
 
-To add your Hotspot to the Hotspot App, [submit an issue and a pull request to the Hotspot Github Repo](https://github.com/helium/hotspot-app/). 
+To add your Hotspot to the Hotspot App, follow the [Maker Guide](https://github.com/helium/hotspot-app/tree/main/src/makers) in GitHub and [submit a pull request to the Hotspot Github Repo](https://github.com/helium/hotspot-app). 
 
-In this codebase, you’ll want to modify the onboarding flow to add a UI element that enables users to select your Hotspot type on this screen, add support emails to Diagnostic Reports (Bluetooth only), and include default antenna TX/RX gain:
+In this codebase, you’ll want to modify the onboarding flow to add a UI element that enables users to select your Hotspot type on this screen, add support emails to Diagnostic Reports (Bluetooth only), add additional onboarding instructions (web/QR) and include default antenna TX/RX gain:
 
 
 :::info
@@ -25,45 +25,42 @@ Product names on this page should follow [Helium branding guidelines](https://ww
 
 :::
 
+# Types of Onboarding
 
-Here is a recommended list of what you should change/add:
+## QR Code Onboarding
 
-### Bluetooth Onboarding:
+QR Code Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Users use the camera in the Helium App to add this type of Hotspot. 
 
-* New UI element in [src/features/hotspots/setup/HotspotSelectionScreen.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/HotspotSelectionScreen.tsx)
-* New picture in [src/assets/images](https://github.com/helium/hotspot-app/blob/main/src/assets/images)
-* Update `HotspotType` and `HotspotName` in [src/store/connectedHotspot/connectedHotspotSlice.ts](https://github.com/helium/hotspot-app/blob/main/src/store/connectedHotspot/connectedHotspotSlice.ts)
-* Hotspot Selection in Add Hotspot page in [src/features/hotspots/setup/HotspotSelectionListItem.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/HotspotSelectionListItem.tsx)
-* New prompt message for power screen and pairing screen in [src/locales/en.ts](https://github.com/helium/hotspot-app/blob/main/src/locales/en.ts)
-* Add a case for your Diagnostics Screen in Onboarding in [src/features/hotspots/setup/HotspotSetupDiagnosticsScreen.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/HotspotSetupDiagnosticsScreen.tsx)
-* Setup instructions, antenna gain, and Maker names in [src/locales/en.ts](https://github.com/helium/hotspot-app/blob/main/src/locales/en.ts)
-* Add Hotspot image in Bluetooth pairing list in [src/components/HotspotPairingList.tsx](https://github.com/helium/hotspot-app/blob/main/src/components/HotspotPairingList.tsx)
-* Add Support Email to diagnostic reports in [src/utils/stakingClient.ts](https://github.com/helium/hotspot-app/blob/main/src/utils/stakingClient.ts#L55)
-* Add Hotspot Antenna Type in Hotspot Settings in [src/components/HotspotConfigurationPicker.tsx](hotspot-app/src/components/HotspotConfigurationPicker.tsx)
-* Add a case for your Antenna type in Antenna Setup in [src/features/hotspots/setupAntennaSetupScreen.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/AntennaSetupScreen.tsx#L34)
+To select QR Onboarding, in the `hotspot.ts` file, specify `QR` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41) or [read more about generating QR codes](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
 
-### QR Code Onboarding:
+### Example QR Onboarding Flow
+<img
+  className="docsheader"
+  style={{ marginBottom: 20 }}
+  src={useBaseUrl("img/mine-hnt/qr-onboarding-1.png")}
+/>
 
-:::info
-
-For an example onboarding flow using QR Code, please visit [the QR Code Onboarding Guide](/mine-hnt/hotspot-makers/hotspot-qr-onboarding)
-
-:::
+<img
+  className="docsheader"
+  style={{ marginBottom: 20 }}
+  src={useBaseUrl("img/mine-hnt/qr-onboarding-2.png")}
+/>
 
 
-* New UI element in [src/features/hotspots/setup/HotspotSelectionScreen.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/HotspotSelectionScreen.tsx)
-* New picture in [src/assets/images](https://github.com/helium/hotspot-app/blob/main/src/assets/images)
-* Hotspot Selection in Add Hotspot page in [src/features/hotspots/setup/HotspotSelectionListItem.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/HotspotSelectionListItem.tsx)
-* Setup instructions, antenna gain, and Maker names in [src/locales/en.ts](https://github.com/helium/hotspot-app/blob/main/src/locales/en.ts)
-* Add Hotspot Antenna Type in Hotspot Settings in [src/components/HotspotConfigurationPicker.tsx](hotspot-app/src/components/HotspotConfigurationPicker.tsx)
-* Add a case for your Antenna type in Antenna Setup in [src/features/hotspots/setupAntennaSetupScreen.tsx](https://github.com/helium/hotspot-app/blob/main/src/features/hotspots/setup/AntennaSetupScreen.tsx#L34)
+## Web Onboarding
+Web Onboarding allows Makers to generate a partial `add_gateway` transaction outside of the Helium App. Makers generate a deep link back to the Helium App to finish the `add_gateway` transaction. [Read more about deep linking](https://docs.helium.com/wallets/app-wallet/deep-links-and-qr-codes/).
 
+To select Web onboarding, in the `hotspot.ts` file, specify `web` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L41)
 
 ## Bluetooth Pairing
 
 The Helium Hotspot App will start scanning for broadcasting Hotspots. Makers will need to update the `localname` with the product name and include the last 6 digits of the MAC identifier. The character limit is 170 but we do not recommend anyone go beyond 25-30 characters in the product name.
 
 The `localname` is the name used on the **Found Hotspots** page.
+
+To select Bluetooth onboarding, in the `hotspot.ts` file, specify `BLE` in `onboardType`. [View the example in GitHub](https://github.com/helium/hotspot-app/blob/bbcf058844965e6501295643b95021b6ef26b280/src/makers/__example__/hotspots.ts#L8).
+
+[Read more about BLE Services](/mine-hnt/full-hotspots/become-a-maker/hotspot-ble-services).
 
 # Constructing the Add Gateway Transaction
 
@@ -116,7 +113,13 @@ Once you’re ready to proceed, request a Maker account and replace the test pay
 
 ## Requesting a Maker Account
 
-Once you are confident that the transaction is sound and well crafted, request a Maker Account from your DeWi or Helium contact. In your request, include the Maker Name and how many location asserts you will include for your customers. A minimum of `1` included location assertion is required. That value is denoted under `locationNonceLimit`.
+:::warning
+
+Only request a Maker Account from your DeWi contact if you have passed the Hardware Audit and Certification stages.
+
+:::
+
+In your request, include the Maker Name and how many location asserts you will include for your customers. A minimum of `1` included location assertion is required. That value is denoted under `locationNonceLimit`.
 
 All Maker Accounts are public on the blockchain [and can be found here](https://onboarding.dewi.org/api/v2/makers). 
 
