--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -29,8 +29,8 @@ replace it with a brand new one:
 3. Format the new card or re-format the existing card into ExFat format.
 4. Download and install a program to Flash the card such as Etcher, if needed:
    https://www.balena.io/etcher
-5. Download the image file to Flash:
-   https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2021.06.21.0-sdcard.img.gz
+5. Download the image file to Flash. Replace the `date` part of the URL with the latest GA tag in the Community Discord's #announcements channel. i.e. `2021.08.02.0`:
+   `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/date-sdcard.img.gz` becomes `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2021.08.02.0-sdcard.img.gz`
 6. Unzip the file.
 7. Use Etcher to Flash the newly formatted microSD card with the file.
 8. Place the newly flashed card back into the card reader slot.
