--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -45,6 +45,10 @@ Helium Console allows developers to add devices and grab the device identifiers
 to load onto their device firmware that authenticates and identifies the device
 for the Helium Network.
 
+### Device setup on the Console and Integration Tutorial Video:
+
+[![Link to YouTube tutorial.](https://img.youtube.com/vi/M5VGos3YTpI/0.jpg)](https://youtu.be/M5VGos3YTpI)
+
 ### Add a Device
 
 To add a device, go to **Devices** and click the **+ Add Device** icon on the
