fix broken link light-hotspots.mdx

--- a/docs/use-the-network/light-hotspots/light-hotspots.mdx
+++ b/docs/use-the-network/light-hotspots/light-hotspots.mdx
@@ -136,7 +136,7 @@ Data Only Hotspots will earn $HNT for device data transfer.
 - **Status: NOT YET STARTED**
 
 At this point, Approved Hotspots from
-[HIP19-approved manufacturers](/mine-hnt/hotspot-makers/approved-makers) with
+[HIP19-approved manufacturers](/mine-hnt/full-hotspots/#approved-makers) with
 lower compute requirements can be added to the network and participate in PoC.
 
 Onboarding for these Light Hotspots will be done via the standard Helium Wallet
