--- a/docs/mine-hnt/data-only-hotspots.mdx
+++ b/docs/mine-hnt/data-only-hotspots.mdx
@@ -110,13 +110,15 @@ light hotspot's keypair. Its location can be customized in the client's
 
 ## Assert Hotspot
 
-To assert the Hotspot using the `helium-wallet hotspots assert`
+To assert the Hotspot use `helium-wallet hotspots assert`
 ```
 helium-wallet hotspots assert --gateway LIGHT_GATEWAY_PUBKEY --lat=37.7806295 --lon=-122.4008481 --mode dataonly
 ```
 
 The `LIGHT_GATEWAY_PUBKEY` in the example from the previous section
 would be `11TL62V8NYvSTXmV5CZCjaucskvNR1Fdar1Pg4Hzmzk5tk2JBac`.
+
+`--elevation` and `--gain` can be also set. Use `helium-wallet hotspots assert --help` for more info.
 
 After you verify the transaction, append the command with `--commit`
 to submit it to the API. Note that you need sufficient funds to cover
