--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -884,7 +884,7 @@ _Query Parameters_
 
 | param        | Type     | Note                                       |
 | ------------ | -------- | ------------------------------------------ |
-| filter_types | _string_ | Comma separated list of transasction types |
+| filter_types | _string_ | Comma separated list of transaction types |
 
 </TabItem>
 <TabItem value="response">
