--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -13,7 +13,7 @@ import TabItem from "@theme/TabItem";
 
 :::warning
 
-These docs reflect the Validator Mainnet API. If you would like to use the Testnet API, 
+These docs reflect the Validator Mainnet API. If you would like to use the Testnet API,
 please use the following base url:
 
 ```
@@ -6460,7 +6460,7 @@ _Query Parameters_
 
 | param        | Type     | Note                                       |
 | ------------ | -------- | ------------------------------------------ |
-| filter_types | _string_ | Comma separated list of transasction types |
+| filter_types | _string_ | Comma separated list of transaction types |
 
 </TabItem>
 <TabItem value="response">
