--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -559,6 +559,12 @@ _Path Parameters_
 | ------------------ | -------- | ----------------------------------------- |
 | address (required) | _string_ | Account B58 address to fetch activity for |
 
+_Query Parameters_
+
+| param        | Type     | Note                                       |
+| ------------ | -------- | ------------------------------------------ |
+| filter_types | _string_ | Comma separated list of transaction types |
+
 </TabItem>
 <TabItem value="response">
 
